[package]
name = "zzva-web"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/main.rs"
name = "zzva-web"

[dependencies]
zzva = {path = "../zzva", version = "1.0.0"}
actix-web = "4"
tokio = {version = "1", features = ["macros", "rt-multi-thread", "test-util"]}
serde = {version = "1", features = ["derive"]}